migrating unconfirmed series for degrees