@@ -496,8 +496,12 @@ public final class ReferenceGenerator {
         return new AcademicMonograph(builder.getMonographPages());
     }
 
-    private static PublicationContext generatePublicationContextForOtherStudentWork(Builder builder) {
-        return new Book.BookBuilder().withIsbnList(Collections.singletonList(builder.getIsbn())).build();
+    private static PublicationContext generatePublicationContextForOtherStudentWork(Builder builder)
+        throws InvalidIssnException {
+        return new Book.BookBuilder()
+                   .withSeries(generateSeries(builder))
+                   .withIsbnList(Collections.singletonList(builder.getIsbn()))
+                   .build();
     }
 
     private static JournalArticle generatePublicationInstanceForJournalArticle(Builder builder) {
@@ -524,8 +528,9 @@ public final class ReferenceGenerator {
                                   .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
                                   .getUri());
         } else {
-            return new UnconfirmedSeries(builder.getSeriesTitle(), builder.getIssnList().get(0),
-                                         builder.getIssnList().get(1));
+            return new UnconfirmedSeries(builder.getSeriesTitle(),
+                                         builder.getIssnList().getFirst(),
+                                         builder.getIssnList().getLast());
         }
     }
 
@@ -583,13 +588,8 @@ public final class ReferenceGenerator {
     private static Book generatePublicationContextForBook(Builder builder) throws InvalidIssnException {
         return new Book.BookBuilder().withSeriesNumber(builder.getSeriesNumberPublication())
                    .withIsbnList(Collections.singletonList(builder.getIsbn()))
-                   .withSeries(getUnconfirmedSeries(builder))
+                   .withSeries(generateSeries(builder))
                    .build();
-    }
-
-    private static UnconfirmedSeries getUnconfirmedSeries(Builder builder) throws InvalidIssnException {
-        return new UnconfirmedSeries(builder.getSeriesTitle(), builder.getIssnList().getFirst(),
-                                     builder.getIssnList().getLast());
     }
 
     private static BookMonograph generatePublicationInstanceForBook(Builder builder) {
@@ -602,7 +602,7 @@ public final class ReferenceGenerator {
     private static Degree generatePublicationContextForDegree(Builder builder)
         throws InvalidIsbnException, InvalidUnconfirmedSeriesException, InvalidIssnException {
         return new Degree.Builder().withIsbnList(Collections.singletonList(builder.getIsbn()))
-                   .withSeries(getUnconfirmedSeries(builder))
+                   .withSeries(generateSeries(builder))
                    .withCourse(new UnconfirmedCourse(builder.getSubjectCode())).build();
     }
 }
